add hover effects and ecnore functionality

--- a/templates/frontend/start/colibri.scooter.html.twig
+++ b/templates/frontend/start/colibri.scooter.html.twig
@@ -9,14 +9,22 @@
 </div>
 <div class="row featurette">
     <div class="col-5 animation-element slide-left">
-        <img src="/COLIBRI CV09.jpg" class="img-fluid mx-auto" />
-    </div>
-    <div class="col-7">
-        <h2 class="featurette-heading">ELEKTROMOBIL COLIBRI<sup>&reg;</sup></h2>
-        <p class="lead">Das Elektromobil Colibri® von Invacare ist besonders
+        <div class="box20">
+            <img src="/COLIBRI CV09.jpg" class="img-fluid mx-auto" />
+            <div class="box-content">
+                <h3 class="title">ELEKTROMOBIL COLIBRI<sup>&reg;</sup></h3>
+                <span class="post">Das Elektromobil Colibri&reg; von Invacare ist besonders
             wendig und im Handumdrehen ohne Werkzeug für den
             Transport in Ihrem Auto zerlegbar. Verschiedene Farbvarianten
-            sind auswählbar.</p>
+            sind auswählbar.</span>
+            </div>
+            <ul class="icon">
+                <li><a href="#"><i class="fa fa-plus"></i></a></li>
+                <li><a href="#"><i class="fa fa-link"></i></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="col-7">
         <div class="d-flex justify-content-between">
             <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
             <p class="lead text-red"><strong>Technische Daten:</strong></p>
