--- a/templates/frontend/start/nav.html.twig
+++ b/templates/frontend/start/nav.html.twig
@@ -1,5 +1,5 @@
 {% block nav %}
-<div class="m-2 d-inline-block" id="teaser">
+<div class="m-2 d-none d-md-inline-block" id="teaser">
     <span class="bx bx-whiteblue"></span>
     <span class="bx bx-lightblue"></span>
     <span class="bx bx-darkblue"></span>
@@ -7,16 +7,10 @@
 <div class="" id="teaser-right">
     <img src="/rac_logo.gif" alt="Reha-aktiv GmbH">
 </div>
-<nav class="navbar navbar-light navbar-expand-md bg-blue py-3">
-    <div class="navbar-brand">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavContent" aria-controls="mainNavContent" aria-expanded="false" aria-label="Toggle navigation">
-            <svg class="svg-inline--fa fa-bars fa-w-14" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg><!-- <i class="fas fa-bars"></i> -->
-        </button>
-    </div>
-    <div class="collapse navbar-collapse" id="mainNavContent">
-        <span class="navbar-text text-white lead">
+<nav class="navbar navbar-light bg-blue py-3">
+
+    <span class="navbar-text text-white lead">
         Mobilität – weil dabei sein wichtig ist!
       </span>
-    </div>
 </nav>
 {% endblock %}
