--- a/assets/css/hover_effect_image.css
+++ b/assets/css/hover_effect_image.css
@@ -7,7 +7,7 @@
 .box20:before {
     width:80%;
     height:220%;
-    background:rgb(210,17,48);
+    background:rgba(211,211,211,.8);
     top:-50%;
     left:-100%;
     z-index:1;
@@ -18,7 +18,7 @@
 .box20:hover:before {
     left:20%
 }
-.box20:after {
+/*.box20:after {
     width:55%;
     height:175%;
     background-color:rgba(79,129,189,.8);
@@ -27,13 +27,13 @@
     transform:rotate(-33deg);
     transform-origin:center bottom 0;
     transition:all .8s ease 0s
-}
+}*/
 .box20 .box-content,.box20 .icon {
     width:100%;padding:0 20px;position:absolute;left:0;z-index:2;transition:all 1.1s ease 0s
 }
-.box20:hover:after {
+/*.box20:hover:after {
     bottom:-70%
-}
+}*/
 .box20 img {
     width:100%;
     height:auto;
@@ -45,8 +45,8 @@
 }
 .box20 .box-content {
     top:-100%;
-    color:rgb(155,155,155);
-    text-shadow: 1px 1px 0 #000;
+    color:rgb(55,96,146);
+    /*text-shadow: 1px 1px 0 #000;*/
 }
 .box20:hover .box-content {
     top:30px
@@ -54,8 +54,15 @@
 .box20 .title {
     font-size:24px;margin:0
 }
-.box20 .icon li a,.box20 .post {
-    display:inline-block;font-size:14px
+.box20 .icon li a,.box20 .post{
+    display:inline-block;
+    font-weight:600;
+    font-size:16px
+}
+.box20 ul {
+    padding: 0;
+    list-style-type: none;
+    font-size:14px
 }
 .box20 .post {
     margin-top:5px
@@ -84,6 +91,30 @@
     background:#fff;
     color:#ff402a
 }
+
+.box20 .more {
+    width: 42px;
+    height: 42px;
+    text-align: center;
+    padding: 8px 0;
+    font-size: 18px;
+    line-height: 1.428571429;
+    border-radius: 21px;
+    background:rgb(55,96,146) ;
+    transition:all .5s ease 0s;
+    position: absolute;
+    bottom:25px;
+    right:25px;
+    color:rgb(255,255,255);
+}
+
+.box20:hover .more {
+    transform: scale(1.4);
+    background: rgba(201,201,201,.8);
+    color:rgb(55,96,146);
+    border-radius: 15px;
+}
+
 @media only screen and (max-width:990px) {
     .box20{
         margin-bottom:30px
