--- a/templates/frontend/start/colibri.scooter.html.twig
+++ b/templates/frontend/start/colibri.scooter.html.twig
@@ -9,25 +9,36 @@
 </div>
 <div class="row featurette">
     <div class="col-5 animation-element slide-left">
+
         <div class="box20">
             <img src="/COLIBRI CV09.jpg" class="img-fluid mx-auto" />
+            <div class="more">
+                <i class="fas fa-info-circle"></i>
+            </div>
             <div class="box-content">
                 <h3 class="title">ELEKTROMOBIL COLIBRI<sup>&reg;</sup></h3>
-                <span class="post">Das Elektromobil Colibri&reg; von Invacare ist besonders
-            wendig und im Handumdrehen ohne Werkzeug für den
-            Transport in Ihrem Auto zerlegbar. Verschiedene Farbvarianten
-            sind auswählbar.</span>
+                <span class="post">Technische Daten:</span>
+                <ul>
+                    <li>Max. Nutzlast 136 kg</li>
+                    <li>Reichweite 16 km</li>
+                    <li>Geschwindigkeit 6 km/h</li>
+                    <li>Gewicht 44 kg</li>
+                    <li>Sitztiefe 40 cm</li>
+                    <li>Sitzhöhe 37-42 cm</li>
+                    <li>Rückenlehne 38,5 cm</li>
+                    <li>Gesamtbreite 50,5 cm</li>
+                    <li>Motorleistung 200 W</li>
+                </ul>
             </div>
-            <ul class="icon">
-                <li><a href="#"><i class="fa fa-plus"></i></a></li>
-                <li><a href="#"><i class="fa fa-link"></i></a></li>
-            </ul>
         </div>
     </div>
     <div class="col-7">
-        <div class="d-flex justify-content-between">
+        <p class="lead">Das Elektromobil Colibri&reg; von Invacare ist besonders
+            wendig und im Handumdrehen ohne Werkzeug für den
+            Transport in Ihrem Auto zerlegbar. Verschiedene Farbvarianten
+            sind auswählbar.</p>
+        <div class="d-flex justify-content-start">
             <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
-            <p class="lead text-red"><strong>Technische Daten:</strong></p>
         </div>
         <div class="d-flex justify-content-between">
             <ul>
@@ -35,17 +46,6 @@
                 <li>Bequemer Sitz</li>
                 <li>Batterieladegerät</li>
                 <li>Inkl. Einkaufskorb vorn</li>
-            </ul>
-            <ul>
-                <li>Max. Nutzlast 136 kg</li>
-                <li>Reichweite 16 km</li>
-                <li>Geschwindigkeit 6 km/h</li>
-                <li>Gewicht 44 kg</li>
-                <li>Sitztiefe 40 cm</li>
-                <li>Sitzhöhe 37-42 cm</li>
-                <li>Rückenlehne 38,5 cm</li>
-                <li>Gesamtbreite 50,5 cm</li>
-                <li>Motorleistung 200 W</li>
             </ul>
         </div>
     </div>
