--- a/assets/css/hover_effect_image.css
+++ b/assets/css/hover_effect_image.css
@@ -106,6 +106,7 @@
     bottom:25px;
     right:25px;
     color:rgb(255,255,255);
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,.3);
 }
 
 .box20:hover .more {
