--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
             {{ encore_entry_link_tags('app') }}
             {{ encore_entry_link_tags('some_page') }}
+            {{ encore_entry_link_tags('card-rotation') }}
         {% endblock %}
     </head>
     <body>
