--- a/templates/frontend/start/index.html.twig
+++ b/templates/frontend/start/index.html.twig
@@ -1,395 +1,8 @@
 {% extends 'base.html.twig' %}
-{% block stylesheets %}
-{{ parent() }}
-    <style type="text/css">
-        .row {
-            margin-left:0 !important;
-            margin-right:0 !important;
-        }
-        /* GLOBAL STYLES
--------------------------------------------------- */
-        /* Padding below the footer and lighter body text */
-
-        /*body {
-            padding-top: 3rem;
-            padding-bottom: 3rem;
-            color: #5a5a5a;
-        }*/
-
-        .bg-blue {
-            background: rgb(2,81,150);
-            color:white;
-        }
-        .bg-blue * {
-            color:white;
-        }
-
-
-        .bx {
-            display: inline-block;
-            position: relative;
-            padding: 1em 1.2rem;
-            text-decoration: none;
-
-        }
-        .bx::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            z-index: 1;
-            transform: skew(-40deg);
-            -webkit-box-shadow: 2px 3px 11px -3px rgba(0,0,0,0.77);
-            -moz-box-shadow: 2px 3px 11px -3px rgba(0,0,0,0.77);
-            box-shadow: 2px 3px 11px -3px rgba(0,0,0,0.77);
-        }
-
-        #teaser {
-            z-index: 2;
-            position: absolute;
-            top:3.2rem;
-            right: 20rem;
-        }
-
-        #teaser-right {
-            background: rgb(255,255,255);
-            height: 78px;
-            padding:.4rem 1.5rem .4rem 1.5rem;
-            z-index: 1;
-            position: absolute;
-            top:0;
-            right: 4.5rem;
-            transform: skew(-40deg);
-            min-width: 290px;
-        }
-
-        #teaser-right * {
-            transform: skew(40deg);
-        }
-        #teaser-right img {
-            padding:0 1.5rem 0 2.2rem;
-        }
-
-        #teaser-right::after {
-            content: ' ';
-            transform: skew(-40deg);
-        }
-
-        .navbar-nav {
-            margin-left:9rem;
-        }
-
-
-        .bx-white::after {
-            background: rgba(255,255,255,1) !important;
-        }
-        .bx-lightwhite::after {
-            background: rgba(255,255,255,0.6) !important;
-        }
-        .bx-whiteblue::after {
-            background: rgb(149,179,215) !important;
-        }
-
-        .bx-lightblue::after {
-            background: rgb(79,129,189) !important;
-        }
-        .bx-darkblue::after {
-            background: rgb(55,96,146) !important;
-        }
-
-        .bg-lightblue {
-            background: rgb(149,179,215) !important;
-        }
-
-        .bg-lightblue * {
-            color:rgb(55,96,146);
-        }
-
-        .bg-blue {
-            background: rgb(79,129,189) !important;
-        }
-
-        .bg-blue *, .bg-darkblue * {
-            color:rgb(255,255,255);
-        }
-
-        .bg-darkblue {
-            background: rgb(55,96,146) !important;
-        }
-
-        .text-red {
-            color:rgb(210,17,48);
-        }
-
-        /* Header Parallax Element Style*/
-        .paral {
-            min-height: 720px;
-            background-attachment: fixed;
-            background-size: cover;
-            background-position: 50% 50%;
-        }
-
-        /* Paragraph for Parallax Section */
-        .paral p {
-            font-size: 24px;
-            color:#f5f5f5;
-            text-align: center;
-            line-height: 60px;
-        }
-
-        /* Heading for Parallax Section */
-        .paral h1 {
-            color: rgba(255, 255, 255, 0.8);
-            font-size: 60px;
-            text-align: center;
-            padding-top: 60px;
-            line-height: 100px;
-        }
-
-        /* Image for Parallax Section */
-        .paralsec {
-            background-image: url('12643_D3_955404_heller.jpg');
-        }
-
-        .paralsec1 {
-            background-image: url("17833-_MG_2141.jpg");}
-
-        .paralsec2 {
-            background-image: url("ORION PRO BE19.jpg");
-        }
-
-        /* Add more images for more sections */
-
-        /* Remove Bottom Margin from Jumbotron */
-        .jumbotron{margin-bottom: 0;}
-
-        /* Footer */
-        .wn-footer {
-            padding: 2.5rem 0;
-            text-align: center;
-            color: white;
-            background: rgb(2,81,150);
-
-        }
-
-        .wn-footer a {
-            color: white;
-            font-weight: 700;
-        }
-
-        .parallax-window {
-            min-height: 600px;
-            background: transparent;
-        }
-
-        .parallax-content {
-            min-height: 600px;
-            background: rgba(255,255,255,0.15);
-        }
-
-        .parallax-content p {
-            font-size: 1.5rem;
-            color:rgb(2,81,150);
-            text-align: center;
-            line-height: 3rem;
-        }
-
-        .parallax-content h1 {
-            color: rgb(2,81,150);
-            text-align: center;
-            padding-top: 10rem;
-            line-height: 4rem;
-        }
-
-        .parallax-content .btn-info {
-            background-color: rgb(77,129,189);
-            border-color: rgb(77,129,189);
-        }
-
-        .parallax-content .btn-info:hover {
-            background-color: rgb(150,178,215);
-            border-color: rgb(150,178,215);
-            color:rgb(2,81,150);
-        }
-
-        /* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-        /* Carousel base class */
-        .carousel {
-            margin-bottom: 4rem;
-        }
-        /* Since positioning the image, we need to help out the caption */
-        .carousel-caption {
-            bottom: 3rem;
-            z-index: 10;
-        }
-
-        /* Declare heights because of positioning of img element */
-        .carousel-item {
-           height:  720px;
-        }
-        .carousel-item > img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            min-width: 100%;
-            height: 720px;
-        }
-
-        /* MARKETING CONTENT
--------------------------------------------------- */
-
-        /* Center align the text within the three columns below the carousel */
-        .marketing .col-lg-4 {
-            margin-bottom: 1.5rem;
-            text-align: center;
-        }
-        .marketing h2 {
-            font-weight: 400;
-        }
-        .marketing .col-lg-4 p {
-            margin-right: .75rem;
-            margin-left: .75rem;
-        }
-
-
-        /* Featurettes
-        ------------------------- */
-
-        .featurette-divider {
-            margin: 5rem 0; /* Space out the Bootstrap <hr> more */
-        }
-
-        /* Thin out the marketing headings */
-        .featurette-heading {
-            font-weight: 300;
-            line-height: 1;
-            letter-spacing: -.05rem;
-        }
-
-        .animation-element {
-            opacity: 0;
-        }
-        /*animation element sliding left*/
-
-        .animation-element.slide-left {
-            opacity: 0;
-            -moz-transition: all 500ms linear;
-            -webkit-transition: all 500ms linear;
-            -o-transition: all 500ms linear;
-            transition: all 500ms linear;
-            -moz-transform: translate3d(-100px, 0px, 0px);
-            -webkit-transform: translate3d(-100px, 0px, 0px);
-            -o-transform: translate(-100px, 0px);
-            -ms-transform: translate(-100px, 0px);
-            transform: translate3d(-100px, 0px, 0px);
-        }
-
-        .animation-element.slide-left.in-view {
-            overflow: hidden;
-            opacity: 1;
-            -moz-transform: translate3d(0px, 0px, 0px);
-            -webkit-transform: translate3d(0px, 0px, 0px);
-            -o-transform: translate(0px, 0px);
-            -ms-transform: translate(0px, 0px);
-            transform: translate3d(0px, 0px, 0px);
-        }
-        div.slider-left {
-            width: 100%;
-            margin: 0 0 0 -3rem;
-            -webkit-transform: skew(-40deg);
-            -moz-transform: skew(-40deg);
-            -o-transform: skew(-40deg);
-            overflow: hidden;
-            position: relative;
-        }
-
-        div.slider-left .header {
-            position: relative;
-            left: -3rem;
-            -webkit-transform: skew(40deg);
-            -moz-transform: skew(40deg);
-            -o-transform: skew(40deg);
-        }
-
-        div.sub-header {
-            width: 100%;
-            margin: 0 0 0 3rem;
-            padding-top: 0.25rem;
-            -webkit-transform: skew(-40deg);
-            -moz-transform: skew(-40deg);
-            -o-transform: skew(-40deg);
-            overflow: hidden;
-            position: relative;
-        }
-        div.sub-header .info {
-            position: relative;
-            left: -3rem;
-            -webkit-transform: skew(40deg);
-            -moz-transform: skew(40deg);
-            -o-transform: skew(40deg);
-            color:rgb(255,255,255);
-        }
-
-        h3.info.bg-lightblue {
-            color:rgb(55,96,146);
-        }
-
-        div.slider-left .header h3 {
-            margin-left:6rem;
-        }
-
-        h4.info {
-            opacity: 0;
-            -webkit-transition: opacity 1s ease-in-out;
-            -moz-transition: opacity 1s ease-in-out;
-            -ms-transition: opacity 1s ease-in-out;
-            -o-transition: opacity 1s ease-in-out;
-            transition: opacity 1s ease-in-out;
-        }
-        .in-visible h4.info {
-            opacity: 1;
-
-        }
-
-    </style>
-{% endblock %}
 {% block javascripts %}
 {{ parent() }}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax.js/1.5.0/parallax.min.js" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        var $animation_elements = $('.animation-element');
-        var $window = $(window);
 
-        function check_if_in_view() {
-            var window_height = $window.height();
-            var window_top_position = $window.scrollTop();
-            var window_bottom_position = (window_top_position + window_height);
-
-            $.each($animation_elements, function() {
-                var $element = $(this);
-                var element_height = $element.outerHeight();
-                var element_top_position = $element.offset().top;
-                var element_bottom_position = (element_top_position + element_height);
-
-                //check to see if this current container is within viewport
-                if ((element_bottom_position >= window_top_position) &&
-                    (element_top_position <= window_bottom_position)) {
-                    $element.addClass('in-view');
-                    $element.parent().addClass('in-visible');
-                } else {
-                    $element.removeClass('in-view');
-                    $element.parent().removeClass('in-visible');
-                }
-            });
-        }
-
-        $window.on('scroll resize', check_if_in_view);
-        $window.trigger('scroll');
-    </script>
 {% endblock %}
 {% block body %}
     {%  include 'frontend/start/nav.html.twig' %}
@@ -401,13 +14,18 @@
         {% include 'frontend/start/intro.mobilität.html.twig' %}
     </div>
     {# End Content Intro Mobilität #}
+    {# Start Event Container #}
+    <div class="container marketing">
+        {% include 'frontend/events/container.html.twig' %}
+    </div>
+    {# End Event Container #}
     {# Start Content Rollator #}
     {% include 'frontend/start/rollator.html.twig' %}
     {# End Content Rollator #}
     <div class="parallax-window" data-parallax="scroll" data-image-src="/VD1_5607_web.jpg">
         <div class="parallax-content"></div>
     </div>
-    <div class="container py-4">
+    <div class="container">
         <p class="lead"><strong>Aktiv-Rollstühle</strong> können heute wahre Leichtgewichte sein! Von der Verwendung daheim bis hin zur Städtetour ist vieles möglich. Aber ob Falt- oder Starrahmen: Das Gewicht ist nur ein Qualitätskriterium, das ein Plus in Sachen Alltagsmobilität bedeutet. Dazu kommen Schmutzempfindlichkeit von Lagern und Lenkradachsen, Rollwiderstand und Wendigkeit. Aber auch ein optimaler Greifpunkt, die richtige Radgröße und die Einstellung des Schwerpunktes sind Themen, die man am besten mit dem Experten bespricht. Das alles finden Sie bei uns!</p>
     </div>
     <div class="parallax-window" data-parallax="scroll" data-image-src="/17833-_MG_2141.jpg">
