add to encore package

--- a/templates/frontend/start/index.html.twig
+++ b/templates/frontend/start/index.html.twig
@@ -14,8 +14,11 @@
     </div>
     {# End Content Intro Mobilität #}
     {# Start Event Container #}
+
     <div class="container marketing">
+        <hr class="featurette-divider">
         {% include 'frontend/events/container.html.twig' %}
+        <hr class="featurette-divider">
     </div>
     {# End Event Container #}
     {# Start Content Rollator #}
