--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -354,3 +354,37 @@ h4.info {
     opacity: 1;
 
 }
+
+time {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    color: rgb(2,81,150);
+    background-color: rgba(255,255,255,.6);
+    padding: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    position:relative;
+    top:-2rem;
+    left:33%;
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.26);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.26);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.26);
+}
+time > span {
+    display: none;
+}
+time > .day {
+    display: block;
+    font-size: 28pt;
+    font-weight: 700;
+    line-height: 1;
+    margin-top:.2rem;
+}
+time > .month {
+    display: block;
+    font-size: 28pt;
+    font-weight: 700;
+    line-height: 1;
+}
