--- a/templates/frontend/start/leo.scooter.html.twig
+++ b/templates/frontend/start/leo.scooter.html.twig
@@ -9,18 +9,39 @@
 </div>
 <div class="row featurette">
     <div class="col-5 animation-element slide-left">
-        <img src="/leo_silver3a.jpg" class="img-fluid mx-auto" />
+
+        <div class="box20">
+            <img src="/leo_silver3a.jpg" class="img-fluid mx-auto" />
+            <div class="more">
+                <i class="fas fa-info-circle"></i>
+            </div>
+            <div class="box-content">
+                <h3 class="title">ELEKTROMOBIL LEO<sup>&reg;</sup></h3>
+                <span class="post">Technische Daten:</span>
+                <ul>
+                    <li>Max. Nutzlast 136 kg</li>
+                    <li>Reichweite 38 km</li>
+                    <li>Geschwindigkeit 6 km/h</li>
+                    <li>Gewicht 83 kg</li>
+                    <li>Sitzbreite 47 cm</li>
+                    <li>Sitztiefe 41 cm</li>
+                    <li>Sitzhöhe 46-56 cm</li>
+                    <li>Rückenlehne 47,5 cm</li>
+                    <li>Gesamtbreite 66 cm</li>
+                    <li>Motorleistung 240 W</li>
+                </ul>
+            </div>
+        </div>
     </div>
     <div class="col-7">
         <h2 class="featurette-heading">ELEKTROMOBIL LEO<sup>&reg;</sup></h2>
         <p class="lead">Der Invacare® Leo® erfüllt mit ÖPNV-Sonderausstattung
             sämtliche Anforderungen für die Mitnahme in öffentlichen
             Verkehrsmitteln.</p>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-start">
             <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
-            <p class="lead text-red"><strong>Technische Daten:</strong></p>
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-start">
             <ul>
                 <li>Doppelscheinwerfer</li>
                 <li>Brems- / Blinklicht</li>
@@ -30,18 +51,7 @@
                 <li>Batterieladegerät</li>
                 <li>Einkaufskorb vorn</li>
             </ul>
-            <ul>
-                <li>Max. Nutzlast 136 kg</li>
-                <li>Reichweite 38 km</li>
-                <li>Geschwindigkeit 6 km/h</li>
-                <li>Gewicht 83 kg</li>
-                <li>Sitzbreite 47 cm</li>
-                <li>Sitztiefe 41 cm</li>
-                <li>Sitzhöhe 46-56 cm</li>
-                <li>Rückenlehne 47,5 cm</li>
-                <li>Gesamtbreite 66 cm</li>
-                <li>Motorleistung 240 W</li>
-            </ul>
+
         </div>
     </div>
 </div>
