--- a/templates/frontend/events/container.html.twig
+++ b/templates/frontend/events/container.html.twig
@@ -1,5 +1,9 @@
 
-<div id="carouselExampleSlidesOnly" class="carousel slide pt-4" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide pt-4" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleControls" data-slide-to="1"></li>
+    </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="row">
@@ -157,7 +161,7 @@
                                 </div>
                                 <div class="footer">
                                     <div class="social-links text-center">
-                                        <a href="https://creative-tim.com" class="facebook"><i class="fab fa-facebook fa-2x"></i></a>
+                                        <a href="https://www.facebook.com/reha.aktiv.gmbh/" class="facebook"><i class="fab fa-facebook fa-2x"></i></a>
                                     </div>
                                 </div>
                             </div>
