--- a/templates/frontend/start/colibri.scooter.html.twig
+++ b/templates/frontend/start/colibri.scooter.html.twig
@@ -9,7 +9,6 @@
 </div>
 <div class="row featurette">
     <div class="col-5 animation-element slide-left">
-
         <div class="box20">
             <img src="/COLIBRI CV09.jpg" class="img-fluid mx-auto" />
             <div class="more">
@@ -40,7 +39,7 @@
         <div class="d-flex justify-content-start">
             <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-start">
             <ul>
                 <li>Ladestandsanzeige</li>
                 <li>Bequemer Sitz</li>
