--- a/templates/frontend/start/comet.scooter.html.twig
+++ b/templates/frontend/start/comet.scooter.html.twig
@@ -9,17 +9,37 @@
 </div>
 <div class="row featurette">
     <div class="col-5 animation-element slide-left">
-        <img src="/COMET PRO CV53.jpg" class="img-fluid mx-auto" />
+        <div class="box20">
+            <img src="/COMET PRO CV53-frei.jpg" class="img-fluid mx-auto" />
+            <div class="more">
+                <i class="fas fa-info-circle"></i>
+            </div>
+            <div class="box-content">
+                <h3 class="title">ELEKTROMOBIL COMET<sup>&reg;</sup></h3>
+                <span class="post">Technische Daten:</span>
+                <ul>
+                    <li>Max. Nutzlast 160 kg</li>
+                    <li>Reichweite 55 km</li>
+                    <li>Geschwindigkeit 15 km/h</li>
+                    <li>Gewicht 63-136 kg</li>
+                    <li>Sitzbreite 51 cm</li>
+                    <li>Sitztiefe 47 cm</li>
+                    <li>Sitzhöhe 44-51 cm</li>
+                    <li>Rückenlehne 49 cm</li>
+                    <li>Gesamtbreite 68,5 cm</li>
+                    <li>Motorleistung ab 550 W</li>
+                </ul>
+            </div>
+        </div>
     </div>
     <div class="col-7">
         <h2 class="featurette-heading">ELEKTROMOBIL COMET<sup>&reg;</sup></h2>
         <p class="lead">Das leistungsstarke Elektromobil ist sowohl für die
             Stadt als auch für den Ausflug in die Natur geeignet.</p>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-start">
             <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
-            <p class="lead text-red"><strong>Technische Daten:</strong></p>
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-start">
             <ul>
                 <li>Premium-Rückspiegel für links und rechts</li>
                 <li>Easy-Drive Funktion</li>
@@ -30,18 +50,7 @@
                 <li>Kurvendrosselung </li>
                 <li>Innovative Federung</li>
             </ul>
-            <ul>
-                <li>Max. Nutzlast 160 kg</li>
-                <li>Reichweite 55 km</li>
-                <li>Geschwindigkeit 15 km/h</li>
-                <li>Gewicht 63-136 kg</li>
-                <li>Sitzbreite 51 cm</li>
-                <li>Sitztiefe 47 cm</li>
-                <li>Sitzhöhe 44-51 cm</li>
-                <li>Rückenlehne 49 cm</li>
-                <li>Gesamtbreite 68,5 cm</li>
-                <li>Motorleistung ab 550 W</li>
-            </ul>
+
         </div>
     </div>
 </div>
