--- a/templates/frontend/start/orion.scooter.html.twig
+++ b/templates/frontend/start/orion.scooter.html.twig
@@ -9,17 +9,36 @@
 </div>
 <div class="row featurette">
     <div class="col-5 animation-element slide-left">
-        <img src="/ORION PRO CV371.jpg" class="img-fluid mx-auto" />
+        <div class="box20">
+            <img src="/ORION PRO CV371-frei.jpg" class="img-fluid mx-auto" />
+            <div class="more">
+                <i class="fas fa-info-circle"></i>
+            </div>
+            <div class="box-content">
+                <h3 class="title">ELEKTROMOBIL ORION<sup>&reg;</sup></h3>
+                <span class="post">Technische Daten:</span>
+                <ul>
+                    <li>Max. Nutzlast 136 kg</li>
+                    <li>Reichweite 43 km</li>
+                    <li>Geschwindigkeit 6 km/h oder 10 km/h</li>
+                    <li>Gewicht 110 kg</li>
+                    <li>Sitzbreite 51 cm</li>
+                    <li>Sitztiefe 47 cm</li>
+                    <li>Sitzhöhe 44-51 cm</li>
+                    <li>Rückenlehne 50 cm</li>
+                    <li>Wenderadius 260 cm</li>
+                </ul>
+            </div>
+        </div>
     </div>
     <div class="col-7">
         <h2 class="featurette-heading">ELEKTROMOBIL ORION<sup>&reg;</sup></h2>
         <p class="lead">Das Elektromobil Orion Pro ist ideal für größere Unternehmungen
             und mit 6 km/h und 10 km/h erhältlich.</p>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-start">
             <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
-            <p class="lead text-red"><strong>Technische Daten:</strong></p>
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-start">
             <ul>
                 <li>Korb vorne</li>
                 <li>Rückspiegel links</li>
@@ -32,17 +51,7 @@
                 <li>Entriegelungshebel</li>
                 <li>Kurvendrosselung vorn</li>
             </ul>
-            <ul>
-                <li>Max. Nutzlast 136 kg</li>
-                <li>Reichweite 43 km</li>
-                <li>Geschwindigkeit 6 km/h oder 10 km/h</li>
-                <li>Gewicht 110 kg</li>
-                <li>Sitzbreite 51 cm</li>
-                <li>Sitztiefe 47 cm</li>
-                <li>Sitzhöhe 44-51 cm</li>
-                <li>Rückenlehne 50 cm</li>
-                <li>Wenderadius 260 cm</li>
-            </ul>
+
         </div>
     </div>
 </div>
