change background images

--- a/templates/frontend/start/index.html.twig
+++ b/templates/frontend/start/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
     {%  include 'frontend/start/nav.html.twig' %}
-    <div class="parallax-window" data-parallax="scroll" data-image-src="/VD1_5037_web.jpg">
+    <div class="parallax-window" data-parallax="scroll" data-image-src="{{ asset('build/images/Fotolia_187909637_M.jpg') }}">
         <div class="parallax-content"></div>
     </div>
     {# Start Content Intro Mobilität #}
