--- a/templates/frontend/start/index.html.twig
+++ b/templates/frontend/start/index.html.twig
@@ -27,7 +27,7 @@
     <div class="parallax-window" data-parallax="scroll" data-image-src="/VD1_5607_web.jpg">
         <div class="parallax-content"></div>
     </div>
-    <div class="container">
+    <div class="container marketing py-4">
         <p class="lead"><strong>Aktiv-Rollstühle</strong> können heute wahre Leichtgewichte sein! Von der Verwendung daheim bis hin zur Städtetour ist vieles möglich. Aber ob Falt- oder Starrahmen: Das Gewicht ist nur ein Qualitätskriterium, das ein Plus in Sachen Alltagsmobilität bedeutet. Dazu kommen Schmutzempfindlichkeit von Lagern und Lenkradachsen, Rollwiderstand und Wendigkeit. Aber auch ein optimaler Greifpunkt, die richtige Radgröße und die Einstellung des Schwerpunktes sind Themen, die man am besten mit dem Experten bespricht. Das alles finden Sie bei uns!</p>
     </div>
     <div class="parallax-window" data-parallax="scroll" data-image-src="/17833-_MG_2141.jpg">
