add chair wheels

--- a/templates/frontend/start/colibri.scooter.html.twig
+++ b/templates/frontend/start/colibri.scooter.html.twig
@@ -32,6 +32,7 @@
         </div>
     </div>
     <div class="col-7">
+        <h2 class="featurette-heading">ELEKTROMOBIL COLIBRI<sup>&reg;</sup></h2>
         <p class="lead">Das Elektromobil Colibri&reg; von Invacare ist besonders
             wendig und im Handumdrehen ohne Werkzeug für den
             Transport in Ihrem Auto zerlegbar. Verschiedene Farbvarianten
