--- a/templates/frontend/start/rollstuhl.html.twig
+++ b/templates/frontend/start/rollstuhl.html.twig
@@ -5,3 +5,15 @@
 <div class="container marketing py-4">
     {% include 'frontend/start/avantgarde.rollstuhl.html.twig' %}
 </div>
+
+<div class="container marketing py-4">
+    {% include 'frontend/start/motus.rollstuhl.html.twig' %}
+</div>
+
+<div class="container marketing py-4">
+    {% include 'frontend/start/zenit.rollstuhl.html.twig' %}
+</div>
+
+<div class="container marketing py-4">
+    {% include 'frontend/start/zenit_r.rollstuhl.html.twig' %}
+</div>
