add teaser text for chairwheel

--- a/templates/frontend/start/avantgarde.rollstuhl.html.twig
+++ b/templates/frontend/start/avantgarde.rollstuhl.html.twig
@@ -37,7 +37,7 @@
     </div>
     <div class="col-7">
         <h2 class="featurette-heading">Ottobock Avantgarde DV</h2>
-        <p class="lead"></p>
+        <p class="lead">Der Avantgarde DV steht für Leichtigkeit – ohne Kompromisse! Denn auf bewährte Vorteile der Avantgard-Serie von Otto Bock, wie etwa abnehm- und wegschwenkbare Beinstützen, muss man nicht verzichten.</p>
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
                 <a class="nav-item nav-link active" id="nav-general-tab" data-toggle="tab" href="#nav-general" role="tab" aria-controls="nav-general" aria-selected="true">Hauptmerkmale</a>
