--- a/templates/frontend/start/zenit.rollstuhl.html.twig
+++ b/templates/frontend/start/zenit.rollstuhl.html.twig
@@ -35,7 +35,7 @@
     </div>
     <div class="col-7">
         <h2 class="featurette-heading">Ottobock Zenit</h2>
-        <p class="lead"></p>
+        <p class="lead">Zenit - ein Faltrollstuhl für (fast) alle Tage!  Dank des patentierten Easy-Go Faltsystems er sich einem sehr geringen Krafteinsatz auseinanderfalten. Zusammen mit dem abklappbaren Rücken ist das eine unschlagbare Kombi, wenn es um ein optimales Packmaß geht. Dabei beeindruckt der Zenit mit aufgeräumter, schnörkelloser Optik, absoluter Stabilität und dem soliden Fahrverhalten einen Starrrahmen-Rollstuhls.</p>
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
                 <a class="nav-item nav-link active" id="nav-general-zenit-tab" data-toggle="tab" href="#nav-general-zenit" role="tab" aria-controls="nav-general-zenit" aria-selected="true">Hauptmerkmale</a>
