--- a/templates/frontend/start/zenit_r.rollstuhl.html.twig
+++ b/templates/frontend/start/zenit_r.rollstuhl.html.twig
@@ -36,6 +36,6 @@
     </div>
     <div class="col-7">
         <h2 class="featurette-heading">Ottobock Zenit R</h2>
-        <p class="lead"></p>
+        <p class="lead">Kompromisslos, effizient, individuell – Zenit R! Gewichtsoptimierte Komponenten und verbesserte Starrrahmeneigenschaften setzen jeden deiner Kraftimpulse direkt in Bewegung um, was die Qualität des Fahrverhaltens enorm steigert. Zahlreiche Einstellmöglichkeiten erlauben zudem eine optimale Anpassung für noch mehr Komfort und machen den Zenit R zu einem Aktivrollstuhl ohne Kompromisse.</p>
     </div>
 </div>
