--- a/templates/frontend/start/motus.rollstuhl.html.twig
+++ b/templates/frontend/start/motus.rollstuhl.html.twig
@@ -13,7 +13,7 @@
     </div>
     <div class="col-7">
         <h2 class="featurette-heading">Ottobock Motus</h2>
-        <p class="lead"></p>
+        <p class="lead">Der Motus ist ein Adaptivrollstuhl, der sich Ihren individuellen Bedürfnissen entsprechend einstellen lässt. Die schwenkbaren Fußrasten und die höhenverstellbare Rückenlehne lassen sich schnell verstellen und sorgen so für bequemeres Sitzen (Motus CV). Optional erhalten Sie Ihren Motus mit kompaktem, festem Vorderrahmen und durchgehender Fußraste aus Aluminium (Motus CS). Übrigens: Transport und Lagerung kann der Motus schnell zusammengelegt werden , das spart Zeit und Energie.</p>
         <div class="d-flex justify-content-start">
             <p class="lead text-red"><strong>Technische Daten</strong></p>
         </div>
