--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -395,6 +395,7 @@ div.siegel {
     bottom:40px;
     right:70px;
     width: 175px;
+    max-width: auto !important;
     min-height: 75px;
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.26);
     -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.26);
