change IE bugfix with image width

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     <body>
 
         <div class="siegel d-none d-md-flex">
-            <img src="./TESTBILD_BdS2019_Siegel_reha-aktiv_Chemnitz_Sanitaetshaeuser.jpg" class="img-fluid" />
+            <img src="{{ asset('TESTBILD_BdS2019_Siegel_reha-aktiv_Chemnitz_Sanitaetshaeuser_web.jpg') }}" class="img-fluid" />
         </div>
         {% block body %}{% endblock %}
         {% block javascripts %}
